apps/overlays/k3d-example/node-red/ingress-k3d.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red-k3d-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  rules:
  - host: node-red.k3d-example.lessingstrasse.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-red-svc
            port:
              number: 1880
  tls:
  - hosts:
    - node-red.k3d-example.lessingstrasse.org
    secretName: node-red.k3d-example.lessingstrasse.org
